fix not-inset-list top position, while keeping inset-lists as they are in touchOverflow mode

--- a/css/structure/jquery.mobile.core.css
+++ b/css/structure/jquery.mobile.core.css
@@ -45,6 +45,13 @@ div.ui-mobile-viewport { overflow-x: hidden; }
 .ui-page.ui-mobile-pre-transition {
 	display: block;
 }
+.ui-mobile-touch-overflow.ui-native-fixed .ui-content .ui-listview {
+	margin-top: 0;
+}
+.ui-mobile-touch-overflow.ui-native-fixed .ui-content .ui-listview-inset {
+	margin-top: 1em;
+	margin-bottom: 0;
+}
 
 /* loading screen */
 .ui-loading .ui-mobile-viewport { overflow: hidden !important; }
